--- a/index.html
+++ b/index.html
@@ -1,132 +1,23 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Senpay – Découverte</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Accueil - Senpay</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <h1>Senpay</h1>
-
-        <!-- Bouton thème -->
-        <button id="themeToggle">🌙 / ☀️</button>
-
-        <!-- Icône menu mobile -->
-        <button id="menuBtn" class="hamburger">
-            ☰
-        </button>
-    </header>
-
-    <!-- MENU -->
-    <nav class="menu" id="menu">
-        <a href="#">Accueil</a>
-        <a href="#">Découvertes</a>
-        <a href="#">Culture</a>
-        <a href="#">Gastronomie</a>
-        <a href="#">Contacts</a>
-    </nav>
-
-    <section class="hero fade-in">
-        <h2>Bienvenue sur Senpay</h2>
-        <p>Explore le Sénégal autrement. Culture, lieux, traditions et découvertes.</p>
-    </section><!-- SLIDER -->
-<section class="slider fade-in">
-    <div class="slides">
-
-        <div class="slide active">
-            <img src="https://picsum.photos/800/400?random=1">
-            <h3>Découvrez le Sénégal</h3>
-        </div>
-
-        <div class="slide">
-            <img src="https://picsum.photos/800/400?random=2">
-            <h3>Culture & Traditions</h3>
-        </div>
-
-        <div class="slide">
-            <img src="https://picsum.photos/800/400?random=3">
-            <h3>Paysages & Nature</h3>
-        </div>
-
-    </div>
-
-    <!-- Boutons -->
-    <button class="prev">❮</button>
-    <button class="next">❯</button>
-</section>
-
-    <section class="cards fade-in">
-        <div class="card">
-            <h3>Sites Touristiques</h3>
-            <p>Découvrez les lieux emblématiques du Sénégal.</p>
-        </div>
-        <div class="card">
-            <h3>Gastronomie</h3>
-            <p>Un voyage culinaire unique.</p>
-        </div>
-        <div class="card">
-            <h3>Culture</h3>
-            <p>Traditions, arts, musiques et histoire.</p>
-        </div>
-    </section>
-<!-- SECTION DÉCOUVERTES -->
-<section class="discover fade-in">
-    <h2>Découvertes du Sénégal</h2>
-    <div class="discover-grid">
-        <div class="discover-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Lake_Retba_aka_Lac_Rose.jpg">
-            <h3>Lac Rose</h3>
-        </div>
-
-        <div class="discover-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/45/Ilot_soudan_ile_goree.jpg">
-            <h3>Île de Gorée</h3>
-        </div>
-
-        <div class="discover-item">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Monument_de_la_Renaissance_Africaine.jpg">
-            <h3>Monument de la Renaissance</h3>
-        </div>
-    </div>
-</section>
-
-<!-- SECTION CULTURE -->
-<section class="culture fade-in">
-    <h2>Culture & Traditions</h2>
-    <p>
-        Le Sénégal est riche en traditions, hospitalité (teranga), musique, danse et histoire.
-    </p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Kora_player_Senegal.jpg" class="culture-img">
-</section>
-
-<!-- SECTION GASTRONOMIE -->
-<section class="food fade-in">
-    <h2>Gastronomie Sénégalaise</h2>
-
-    <div class="food-grid">
-        <div class="food-card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/Thiéboudienne_01.jpg">
-            <h3>Thiéboudiène</h3>
-        </div>
-
-        <div class="food-card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Yassa_poulet.jpg">
-            <h3>Yassa Poulet</h3>
-        </div>
-
-        <div class="food-card">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Mafe_with_Rice.jpg">
-            <h3>Mafé</h3>
-        </div>
-    </div>
-</section>
-    <footer>
-        <p>© 2025 Senpay – Tous droits réservés.</p>
-    </footer>
-
-    <script src="script.js"></script>
+<nav>
+  <ul>
+    <li><a href="index.html">Accueil</a></li>
+    <li><a href="about.html">À propos</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="paiement.html">Paiement</a></li>
+  </ul>
+</nav>
+<div class="container">
+  <h1>Bienvenue sur Senpay</h1>
+  <p>Senpay est votre plateforme de paiement sécurisée et rapide.</p>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
