--- a/index.html
+++ b/index.html
@@ -21,3 +21,86 @@
 <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Senpay - Découverte du Sénégal</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- ===== MENU ===== -->
+<header>
+    <nav class="navbar">
+        <div class="logo">Senpay</div>
+        <ul class="nav-links">
+            <li><a href="#hero">Accueil</a></li>
+            <li><a href="#discover">Découvertes</a></li>
+            <li><a href="#culture">Culture</a></li>
+            <li><a href="#food">Gastronomie</a></li>
+        </ul>
+        <div class="theme-toggle">🌙</div>
+    </nav>
+</header>
+
+<!-- ===== HERO ===== -->
+<section id="hero" class="hero fade-in">
+    <h1>Bienvenue au Sénégal</h1>
+    <p>Explorez le pays de la Teranga et de la diversité culturelle.</p>
+</section>
+
+<!-- ===== DÉCOUVERTES ===== -->
+<section id="discover" class="discover fade-in">
+    <h2>Découvertes du Sénégal</h2>
+    <div class="discover-grid">
+        <div class="discover-item">
+            <img src="assets/lac_rose.jpg" alt="Lac Rose">
+            <h3>Lac Rose</h3>
+        </div>
+        <div class="discover-item">
+            <img src="assets/ile_goree.jpg" alt="Île de Gorée">
+            <h3>Île de Gorée</h3>
+        </div>
+        <div class="discover-item">
+            <img src="assets/monument_renaissance.jpg" alt="Monument de la Renaissance">
+            <h3>Monument de la Renaissance</h3>
+        </div>
+    </div>
+</section>
+
+<!-- ===== CULTURE ===== -->
+<section id="culture" class="culture fade-in">
+    <h2>Culture & Traditions</h2>
+    <p>Le Sénégal est riche en musique, danse, et histoire.</p>
+    <img src="assets/kora_player.jpg" alt="Musique Sénégalaise" class="culture-img">
+</section>
+
+<!-- ===== GASTRONOMIE ===== -->
+<section id="food" class="food fade-in">
+    <h2>Gastronomie Sénégalaise</h2>
+    <div class="food-grid">
+        <div class="food-card">
+            <img src="assets/thieboudienne.jpg" alt="Thiéboudiène">
+            <h3>Thiéboudiène</h3>
+        </div>
+        <div class="food-card">
+            <img src="assets/yassa.jpg" alt="Yassa Poulet">
+            <h3>Yassa Poulet</h3>
+        </div>
+        <div class="food-card">
+            <img src="assets/mafe.jpg" alt="Mafé">
+            <h3>Mafé</h3>
+        </div>
+    </div>
+</section>
+
+<!-- ===== FOOTER ===== -->
+<footer>
+    <p>© 2025 Senpay - Tous droits réservés</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
