--- a/index.html
+++ b/index.html
@@ -281,3 +281,96 @@
 <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Senpay - Découverte du Sénégal</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- ===== NAVBAR ===== -->
+<header>
+  <nav class="navbar">
+    <div class="logo">Senpay</div>
+    <div class="menu-toggle">☰</div>
+    <ul class="nav-links">
+      <li><a href="#hero">Accueil</a></li>
+      <li><a href="#discover">Découvertes</a></li>
+      <li><a href="#culture">Culture</a></li>
+      <li><a href="#food">Gastronomie</a></li>
+    </ul>
+    <div class="theme-toggle">🌙</div>
+  </nav>
+</header>
+
+<!-- ===== HERO SLIDER ===== -->
+<section id="hero" class="hero">
+  <div class="slider">
+    <div class="slide active" style="background-image:url('https://i.ibb.co/XyG5m3X/lac-rose-ai.jpg');">
+      <h1>Lac Rose</h1>
+    </div>
+    <div class="slide" style="background-image:url('https://i.ibb.co/0c1mWkc/ile-goree-ai.jpg');">
+      <h1>Île de Gorée</h1>
+    </div>
+    <div class="slide" style="background-image:url('https://i.ibb.co/RY5h5Vf/monument-renaissance-ai.jpg');">
+      <h1>Monument de la Renaissance</h1>
+    </div>
+  </div>
+</section>
+
+<!-- ===== DÉCOUVERTES ===== -->
+<section id="discover" class="discover fade-in">
+  <h2>Découvertes du Sénégal</h2>
+  <div class="discover-grid">
+    <div class="discover-item">
+      <img src="https://i.ibb.co/XyG5m3X/lac-rose-ai.jpg" alt="Lac Rose">
+      <h3>Lac Rose</h3>
+    </div>
+    <div class="discover-item">
+      <img src="https://i.ibb.co/0c1mWkc/ile-goree-ai.jpg" alt="Île de Gorée">
+      <h3>Île de Gorée</h3>
+    </div>
+    <div class="discover-item">
+      <img src="https://i.ibb.co/RY5h5Vf/monument-renaissance-ai.jpg" alt="Monument de la Renaissance">
+      <h3>Monument de la Renaissance</h3>
+    </div>
+  </div>
+</section>
+
+<!-- ===== CULTURE ===== -->
+<section id="culture" class="culture fade-in">
+  <h2>Culture & Traditions</h2>
+  <p>Le Sénégal est riche en musique, danse et histoire.</p>
+  <img src="https://i.ibb.co/0JXK7vB/musique-senegal-ai.jpg" alt="Musique Sénégalaise" class="culture-img">
+</section>
+
+<!-- ===== GASTRONOMIE ===== -->
+<section id="food" class="food fade-in">
+  <h2>Gastronomie Sénégalaise</h2>
+  <div class="food-grid">
+    <div class="food-card">
+      <img src="https://i.ibb.co/2S7Rgw3/thieboudienne-ai.jpg" alt="Thiéboudiène">
+      <h3>Thiéboudiène</h3>
+    </div>
+    <div class="food-card">
+      <img src="https://i.ibb.co/p1kNq9B/yassa-ai.jpg" alt="Yassa Poulet">
+      <h3>Yassa Poulet</h3>
+    </div>
+    <div class="food-card">
+      <img src="https://i.ibb.co/f8mQYgk/mafe-ai.jpg" alt="Mafé">
+      <h3>Mafé</h3>
+    </div>
+  </div>
+</section>
+
+<!-- ===== FOOTER ===== -->
+<footer>
+  <p>© 2025 Senpay - Tous droits réservés</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
